# pythonProject

./: README.md  conftest.py  pyproject.toml  pytest.ini  report.html
pages/locators/: add_new_members_locators.py  main_page_locators.py
pages/page_objects/: add_new_member_page.py  base_page.py  main_page.py
tests/: test_add_new_member_page.py  test_main_page.py
