[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["shay <elguaje1107@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.0"
pytest-playwright = "^0.4.2"
pytest-base-url = "^2.0.0"
pytest-xdist = "^3.3.1"
playwright = "^1.37.0"
pytest-html = "^3.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
